rectifyed formatting and other formatting

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </head>
     <body>
         <h1>Politburo-Inc</h1>
-        <h2 id="test">Patton Pending. <mark>Indefinetly.</mark></h2>
+        <h2 id="test">Patton Pending. Indefinetly.</h2> <!--<mark></mark>-->
         <div class="address-bar">
             <h2><a href="projects.html">Projects</a><h2>
             <h2><a href="">Github</a></h2>
